tests/should_succeed/double_import.jou
import "stdlib/io.jou"
import "stdlib/io.jou"  # Warning: "stdlib/io.jou" imported but not used

def main() -> int:
    printf("hi\n")  # Output: hi
    return 0
