tests/syntax_error/unknown_escape_ascii.jou
def main() -> int:
    return '\p'  # Error: unknown escape: '\p'
